# mycpu

./: .gitignore  Makefile  README.md  build.sc  test.anno.json
test_env/: CMakeLists.txt  cmkae_run.sh  failed.gtkw  gen_dut.sh  main.cpp  run.sh
test_env/decode/: CMakeLists.txt  decode.cpp  decode.h
test_env/decode/isa/: rv32i.h
test_env/dut/: top_tb.v
test_env/dut/rtl/: ALU.v  ALUStage.v  ALUStage_1.v  ALU_1.v  Alu.v  Arbiter.v  Arbiter_1.v  Arbiter_10.v  Arbiter_2.v  Arbiter_3.v  Arbiter_4.v  Arbiter_5.v  Arbiter_6.v  Arbiter_7.v  Arbiter_8.v  Arbiter_9.v  BRU.v  BRUStage.v  BRUStage_1.v  BTB.v  BankRAM_1P.v  BankRAM_2P.v  BankRAM_2P_104.v  BankRAM_2P_112.v  BankRAM_2P_120.v  BankRAM_2P_64.v  BankRAM_2P_72.v  BankRAM_2P_80.v  BankRAM_2P_84.v  BankRAM_2P_96.v  BankRam1P_1.v  BankRam1P_1_10.v  BankRam1P_1_32.v  BankRam1P_1_33.v  BankRam1P_1_34.v  BankRam1P_1_35.v  BankRam1P_1_51.v  BankRam1P_1_52.v  BankRam1P_1_53.v  BankRam1P_1_8.v  (+130 more)
test_env/emu/: CMakeLists.txt  emu.cpp  emu.h  table.txt
test_env/tests/: test_case_cfg.json
test_env/tests/rv32i/: Makefile
test_env/tests/rv32i/rv32ui-p/: rv32ui-p-add  rv32ui-p-addi.dump  rv32ui-p-and.dump  rv32ui-p-auipc  rv32ui-p-auipc.dump  rv32ui-p-bge.dump  rv32ui-p-bgeu  rv32ui-p-bgeu.dump  rv32ui-p-blt  rv32ui-p-blt.dump  rv32ui-p-bltu  rv32ui-p-bne.dump  rv32ui-p-fence_i  rv32ui-p-fence_i.dump  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-jalr.dump  rv32ui-p-lb  (+31 more)
test_env/unicorn/: CMakeLists.txt  uc_engine.cpp  uc_engine.h
test_env/unicorn/samples/: Makefile  sample_riscv  test1.c
test_env/utils/: common.h
(+308 files in other folders)
